--- a/package.json
+++ b/package.json
@@ -3,30 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@react-pdf/renderer": "^3.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.1",
+    "buffer": "^6.0.3",
+    "date-fns": "^2.29.3",
     "firebase": "^8.8.1",
     "lottie-react": "^2.3.1",
     "nuka-carousel": "^5.4.0",
+    "openmobile": "^1.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.4.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "5.x",
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
     "react-svg": "^15.1.8",
+    "react-to-print": "^2.14.7",
     "react-toastify": "^9.0.8",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "openmobile": "node ./node_modules/openmobile/ip.js"
   },
   "eslintConfig": {
     "extends": [
@@ -45,5 +54,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
